--- a/packages/classic/scss/signature/_variables.scss
+++ b/packages/classic/scss/signature/_variables.scss
@@ -1,7 +1,7 @@
 $kendo-signature-width: 250px !default;
 $kendo-signature-height: 84px !default;
 
-$kendo-signature-lg-min-height: 110px;
+$kendo-signature-lg-min-height: 110px !default;
 
 $kendo-signature-maximized-width: 750px !default;
 $kendo-signature-maximized-height: 252px !default;
