--- a/packages/default/scss/action-sheet/_layout.scss
+++ b/packages/default/scss/action-sheet/_layout.scss
@@ -261,7 +261,7 @@
         .k-actionsheet-content,
         .k-actionsheet-footer {
             margin-inline: auto;
-            width: unquote("min(100%, 360px)");
+            width: k-string-unquote("min(100%, 360px)");
         }
 
         .k-list-container,
