--- a/packages/fluent/scss/core/mixins/_box-shadow.scss
+++ b/packages/fluent/scss/core/mixins/_box-shadow.scss
@@ -1,7 +1,8 @@
+@use "sass:list";
 @use "../_variables.scss" as *;
 
 @mixin box-shadow( $shadow... ) {
-    @if $enable-shadows and nth($shadow, 1) {
+    @if $enable-shadows and list.nth( $shadow, 1 ) {
         box-shadow: $shadow;
     }
 }
