--- a/packages/fluent/scss/listbox/_variables.scss
+++ b/packages/fluent/scss/listbox/_variables.scss
@@ -21,7 +21,7 @@ $kendo-listbox-border-width: 1px !default;
 $kendo-listbox-font-family: var( --kendo-font-family, normal ) !default;
 /// Font size of the listbox.
 /// @group listbox
-$kendo-listbox-font-size: var( --kendo-font-size, inherit ) !default;;
+$kendo-listbox-font-size: var( --kendo-font-size, inherit ) !default;
 /// Line height of the listbox.
 /// @group listbox
 $kendo-listbox-line-height: var( --kendo-line-height, normal ) !default;
