--- a/packages/fluent/scss/signature/_variables.scss
+++ b/packages/fluent/scss/signature/_variables.scss
@@ -82,4 +82,4 @@ $kendo-signature-maximized-line-width: 3px !default;
 
 /// The min-height of the large size signature component.
 /// @group signature
-$kendo-signature-lg-min-height: 110px;
+$kendo-signature-lg-min-height: 110px !default;
