--- a/packages/bootstrap/scss/grid/_variables.scss
+++ b/packages/bootstrap/scss/grid/_variables.scss
@@ -48,11 +48,11 @@ $kendo-grid-edit-cell-padding-x: $kendo-grid-cell-padding-x !default;
 $kendo-grid-edit-cell-padding-y: 5px !default;
 
 $kendo-grid-group-dropclue-size: 6px !default;
-$kendo-grid-group-dropclue-line-size: $kendo-grid-group-dropclue-size / 3;
+$kendo-grid-group-dropclue-line-size: k-math-div( $kendo-grid-group-dropclue-size, 3) !default;
 $kendo-grid-group-dropclue-height: calc( #{$kendo-chip-calc-size} + #{$kendo-grid-group-dropclue-size}) !default;
 $kendo-grid-group-dropclue-top: 3px !default;
 
-$kendo-grid-padding-x-sm: map-get( $spacing, 1 ) !default;
+$kendo-grid-padding-x-sm: k-map-get( $spacing, 1 ) !default;
 $kendo-grid-padding-y-sm: k-map-get( $spacing, 1 ) !default;
 $kendo-grid-header-padding-x-sm: $kendo-grid-padding-x-sm !default;
 $kendo-grid-header-padding-y-sm: $kendo-grid-padding-y-sm !default;
@@ -264,7 +264,7 @@ $kendo-grid-column-menu-group-header-border: $popup-border !default;
 
 $kendo-grid-drag-cell-width: ($icon-size * 3) !default;
 
-$kendo-grid-row-inner-height: calc( #{$line-height-em} + #{$kendo-grid-cell-padding-y * 2} );
+$kendo-grid-row-inner-height: calc( #{$line-height-em} + #{$kendo-grid-cell-padding-y * 2} ) !default;
 
 $kendo-grid-hierarchy-col-width: ($icon-size * 2) !default;
 
