--- a/packages/bootstrap/scss/scheduler/_variables.scss
+++ b/packages/bootstrap/scss/scheduler/_variables.scss
@@ -66,7 +66,7 @@ $scheduler-yearview-calendar-gap: k-map-get( $spacing, 4 ) !default;
 
 $scheduler-yearview-indicator-size: 3px !default;
 $scheduler-yearview-indicator-calc-offset-top: calc( #{$calendar-cell-size} - (#{$calendar-cell-padding-y} * 2)) !default;
-$scheduler-yearview-indicator-calc-offset-left: calc( 50% - (#{$scheduler-yearview-indicator-size} / 2) ) !default;
+$scheduler-yearview-indicator-calc-offset-left: calc( 50% - #{k-math-div( $scheduler-yearview-indicator-size, 2)} ) !default;
 $scheduler-yearview-indicator-border-radius: 50% !default;
 $scheduler-yearview-indicator-bg: $primary !default;
 $scheduler-yearview-indicator-selected-bg: $primary-contrast !default;
