--- a/packages/core/scss/functions/_color-manipulation.import.scss
+++ b/packages/core/scss/functions/_color-manipulation.import.scss
@@ -28,7 +28,7 @@ $kendo-color-level-step: 8% !default;
 }
 
 @function k-try-shade( $color, $level: 1 ) {
-    $dark-theme: if( variable-exists( dark-theme ), $dark-theme, false );
+    $dark-theme: if( k-meta-variable-exists( dark-theme ), $dark-theme, false );
 
     @if $dark-theme {
         @return k-color-tint( $color, $level );
@@ -37,7 +37,7 @@ $kendo-color-level-step: 8% !default;
     @return k-color-shade( $color, $level );
 }
 @function k-try-tint( $color, $level: 1 ) {
-    $dark-theme: if( variable-exists( dark-theme ), $dark-theme, false );
+    $dark-theme: if( k-meta-variable-exists( dark-theme ), $dark-theme, false );
 
     @if $dark-theme {
         @return k-color-shade( $color, $level );
@@ -48,7 +48,7 @@ $kendo-color-level-step: 8% !default;
 
 
 @function k-try-darken( $color, $amount ) {
-    $dark-theme: if( variable-exists( dark-theme ), $dark-theme, false );
+    $dark-theme: if( k-meta-variable-exists( dark-theme ), $dark-theme, false );
 
     @if $dark-theme {
         @return k-color-lighten( $color, $amount );
@@ -57,7 +57,7 @@ $kendo-color-level-step: 8% !default;
 }
 
 @function k-try-lighten( $color, $amount ) {
-    $dark-theme: if( variable-exists( dark-theme ), $dark-theme, false );
+    $dark-theme: if( k-meta-variable-exists( dark-theme ), $dark-theme, false );
 
     @if $dark-theme {
         @return k-color-darken( $color, $amount );
