--- a/packages/core/scss/mixins/_box-shadow.scss
+++ b/packages/core/scss/mixins/_box-shadow.scss
@@ -1,5 +1,5 @@
 @mixin box-shadow( $shadow... ) {
-    @if $enable-shadows and nth($shadow, 1) {
+    @if $enable-shadows and k-list-nth($shadow, 1) {
         box-shadow: $shadow;
     }
 }
