--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -863,20 +863,20 @@
 
     // Grid Sizes
     @each $size, $size-props in $kendo-grid-sizes {
-        $_header-padding-x: map-get( $size-props, header-padding-x );
-        $_header-padding-y: map-get( $size-props, header-padding-y );
-        $_grouping-header-padding-x: map-get( $size-props, grouping-header-padding-x );
-        $_grouping-header-padding-y: map-get( $size-props, grouping-header-padding-y );
-        $_cell-padding-x: map-get( $size-props, cell-padding-x );
-        $_cell-padding-y: map-get( $size-props, cell-padding-y );
-        $_filter-cell-padding-x: map-get( $size-props, filter-cell-padding-x );
-        $_filter-cell-padding-y: map-get( $size-props, filter-cell-padding-y );
-        $_edit-cell-padding-x: map-get( $size-props, edit-cell-padding-x );
-        $_edit-cell-padding-y: map-get( $size-props, edit-cell-padding-y );
-        $_button-padding-y: map-get( $size-props, button-padding-y );
-        $_button-calc-size: map-get( $size-props, button-calc-size );
-        $_button-line-height: map-get( $size-props, button-line-height );
-        $_group-dropclue-height: map-get( $size-props, group-dropclue-height );
+        $_header-padding-x: k-map-get( $size-props, header-padding-x );
+        $_header-padding-y: k-map-get( $size-props, header-padding-y );
+        $_grouping-header-padding-x: k-map-get( $size-props, grouping-header-padding-x );
+        $_grouping-header-padding-y: k-map-get( $size-props, grouping-header-padding-y );
+        $_cell-padding-x: k-map-get( $size-props, cell-padding-x );
+        $_cell-padding-y: k-map-get( $size-props, cell-padding-y );
+        $_filter-cell-padding-x: k-map-get( $size-props, filter-cell-padding-x );
+        $_filter-cell-padding-y: k-map-get( $size-props, filter-cell-padding-y );
+        $_edit-cell-padding-x: k-map-get( $size-props, edit-cell-padding-x );
+        $_edit-cell-padding-y: k-map-get( $size-props, edit-cell-padding-y );
+        $_button-padding-y: k-map-get( $size-props, button-padding-y );
+        $_button-calc-size: k-map-get( $size-props, button-calc-size );
+        $_button-line-height: k-map-get( $size-props, button-line-height );
+        $_group-dropclue-height: k-map-get( $size-props, group-dropclue-height );
 
         .k-grid-#{$size} {
 
@@ -910,7 +910,7 @@
                     width: $_button-calc-size;
                     height: $_button-calc-size;
                     line-height: $_button-line-height;
-                    bottom: calc( #{ $_header-padding-y } + #{ $line-height-em / 2 } - #{ $kendo-button-inner-calc-size / 2 } );
+                    bottom: calc( #{$_header-padding-y} + #{k-math-div( $line-height-em, 2)} - #{k-math-div( $kendo-button-inner-calc-size, 2 )} );
                 }
             }
 
@@ -925,7 +925,7 @@
             }
 
             .k-grouping-row .k-icon {
-                margin-inline-start: calc( #{$icon-size / 2} - #{$_cell-padding-x} );
+                margin-inline-start: calc( #{k-math-div( $icon-size, 2 )} - #{$_cell-padding-x} );
             }
 
             .k-grouping-dropclue {
