--- a/packages/default/scss/grid/_variables.scss
+++ b/packages/default/scss/grid/_variables.scss
@@ -47,7 +47,7 @@ $kendo-grid-edit-cell-padding-x: $kendo-grid-cell-padding-x !default;
 $kendo-grid-edit-cell-padding-y: 3px !default;
 
 $kendo-grid-group-dropclue-size: 6px !default;
-$kendo-grid-group-dropclue-line-size: $kendo-grid-group-dropclue-size / 3;
+$kendo-grid-group-dropclue-line-size: k-math-div( $kendo-grid-group-dropclue-size, 3 ) !default;
 $kendo-grid-group-dropclue-height: calc( #{$kendo-chip-calc-size} + #{$kendo-grid-group-dropclue-size}) !default;
 $kendo-grid-group-dropclue-top: 3px !default;
 
@@ -264,11 +264,10 @@ $kendo-grid-column-menu-group-header-border: $popup-border !default;
 
 $kendo-grid-drag-cell-width: ($icon-size * 2.25) !default;
 
-$kendo-grid-row-inner-height: calc( #{$line-height-em} + #{$kendo-grid-cell-padding-y * 2} );
+$kendo-grid-row-inner-height: calc( #{$line-height-em} + #{$kendo-grid-cell-padding-y * 2} ) !default;
 
 $kendo-grid-hierarchy-col-width: ($icon-size * 2) !default;
 
 $kendo-grid-grouping-row-border-top: 1px !default;
 $kendo-grid-group-footer-border-y: 1px !default;
 $kendo-grid-group-footer-second-cell-border: 1px !default;
-
