--- a/packages/default/scss/notification/_variables.scss
+++ b/packages/default/scss/notification/_variables.scss
@@ -44,7 +44,7 @@ $kendo-notification-border: $component-border !default;
 
     // sass-lint:disable-block indentation
     @each $name, $color in $colors {
-        $_theme: map-merge(( $name: (
+        $_theme: k-map-merge(( $name: (
             color: k-contrast-legacy( $color ),
             background-color: $color,
             border: $color,
