--- a/packages/fluent/scss/card/_variables.scss
+++ b/packages/fluent/scss/card/_variables.scss
@@ -149,15 +149,15 @@ $kendo-card-deck-scroll-button-offset: ( -1 * $kendo-button-border-width ) !defa
 $kendo-card-callout-size: 20px !default;
 
 /// Theme variations for the card.
-$kendo-card-brand-colors: ( primary, error, warning, success, info );
+$kendo-card-brand-colors: ( primary, error, warning, success, info ) !default;
 
 // Matrix with card theme colors in the order: bg, color, border
 $_tc-card-matrix: (
     (normal: (20, 160, 20)),
-);
+) !default;
 
 /// Theme colors map for the card variations.
-$kendo-card-theme-colors: ();
+$kendo-card-theme-colors: () !default;
 
 @each $ui-states in $_tc-card-matrix {
     @each $brand-color in $kendo-card-brand-colors {
