--- a/packages/fluent/scss/chip/_variables.scss
+++ b/packages/fluent/scss/chip/_variables.scss
@@ -12,17 +12,17 @@ $kendo-chip-spacing: map.get( $kendo-spacing, 1 ) !default;
 
 /// The font family of the chip.
 /// @group chip
-$kendo-chip-font-family: var( --kendo-font-family, inherit );
+$kendo-chip-font-family: var( --kendo-font-family, inherit ) !default;
 
 /// The chip avatar width.
 /// @group chip
-$kendo-chip-avatar-width: 1em;
+$kendo-chip-avatar-width: 1em !default;
 /// The chip avatar height.
 /// @group chip
-$kendo-chip-avatar-height: 1em;
+$kendo-chip-avatar-height: 1em !default;
 /// The chip avatar flex basis.
 /// @group chip
-$kendo-chip-avatar-flex-basis: 1em;
+$kendo-chip-avatar-flex-basis: 1em !default;
 /// The text color of disabled chip.
 /// @group chip
 $kendo-chip-disabled-text: var( --kendo-disabled-text, inherit ) !default;
@@ -102,7 +102,7 @@ $kendo-chip-sizes: (
 ) !default;
 
 
-$kendo-chip-brand-colors: ( error, success, info );
+$kendo-chip-brand-colors: ( error, success, info ) !default;
 
 // Matrices with theme colors in the order: bg, color, border, outline
 
@@ -126,7 +126,7 @@ $_tc-base-matrix: (
         selected-hover: (20, 190, 110),
         disabled: (initial, var( --kendo-disabled-text, inherit ), 90)
     ),
-);
+) !default;
 
 // Color matrix for error, success, info chips
 $_tc-brand-matrix: (
@@ -148,7 +148,7 @@ $_tc-brand-matrix: (
         selected-hover: (190, $white, 190),
         disabled: (initial, var( --kendo-disabled-text, inherit ), var( --kendo-disabled-text, inherit ))
     )
-);
+) !default;
 
 // Color matrix for warning chips
 $_tc-warning-matrix: (
@@ -170,10 +170,10 @@ $_tc-warning-matrix: (
         selected-hover: (190, $white, 190),
         disabled: (initial, var( --kendo-disabled-text, inherit ), var( --kendo-disabled-text, inherit ))
     )
-);
+) !default;
 
 /// Theme colors map for the button.
-$kendo-chip-theme-colors: ();
+$kendo-chip-theme-colors: () !default;
 
 // Map for base theme color
 @each $fill-mode, $ui-states in $_tc-base-matrix {
