--- a/packages/fluent/scss/core/functions/_strings.scss
+++ b/packages/fluent/scss/core/functions/_strings.scss
@@ -1,3 +1,5 @@
+@use "sass:string";
+
 $svg-escaped-characters: (
     ("%", "%25"),
     ("<", "%3c"),
@@ -9,10 +11,10 @@ $svg-escaped-characters: (
 
 // See https://www.sassmeister.com/gist/1b4f2da5527830088e4d
 @function str-replace($string, $search, $replace: "") {
-    $index: str-index($string, $search);
+    $index: string.index($string, $search);
 
     @if $index {
-        @return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
+        @return string.slice($string, 1, $index - 1) + $replace + str-replace(string.slice($string, $index + string.length($search)), $search, $replace);
     }
 
     @return $string;
@@ -20,11 +22,11 @@ $svg-escaped-characters: (
 
 // See https://codepen.io/kevinweber/pen/dXWoRw
 @function escape-svg($string) {
-    @if str-index($string, "data:image/svg+xml") {
+    @if string.index($string, "data:image/svg+xml") {
         @each $char, $encoded in $svg-escaped-characters {
             // Do not escape the url brackets
-            @if str-index($string, "url(") == 1 {
-                $string: url("#{str-replace(str-slice($string, 6, -3), $char, $encoded)}");
+            @if string.index($string, "url(") == 1 {
+                $string: url("#{str-replace(string.slice($string, 6, -3), $char, $encoded)}");
             } @else {
                 $string: str-replace($string, $char, $encoded);
             }
