--- a/packages/fluent/scss/dataviz/_layout.scss
+++ b/packages/fluent/scss/dataviz/_layout.scss
@@ -1,3 +1,4 @@
+@use "sass:meta";
 @use "sass:string";
 @use "../core/" as *;
 @use "./_variables.scss" as *;
@@ -448,7 +449,7 @@
     );
 
     @each $name, $value in $exported {
-        $type: type-of($value);
+        $type: meta.type-of($value);
 
         .k-var--#{$name} {
             @if $type == "color" {
