--- a/packages/fluent/scss/forms/_variables.scss
+++ b/packages/fluent/scss/forms/_variables.scss
@@ -83,7 +83,7 @@ $kendo-form-hint-margin-top: map.get( $kendo-spacing, 1 ) !default;
 
 /// The text color of the font hint
 /// @group form
-$kendo-form-hint-text: get-theme-color-var( neutral-130 );
+$kendo-form-hint-text: get-theme-color-var( neutral-130 ) !default;
 
 /// Form row small size spacing
 /// @group form
