--- a/packages/material/scss/core/color-system/_color-system-material.scss
+++ b/packages/material/scss/core/color-system/_color-system-material.scss
@@ -715,7 +715,7 @@ $material-light-complimentary: (
 // of the Material Design hues.
 @function material-palette($base-palette, $main: 500, $lighter: 300, $darker: 700, $adjust-contrast: true) {
 
-    @if not (type-of($base-palette) == map) {
+    @if not (k-meta-type-of($base-palette) == map) {
         $base-palette: get-base-palette($base-palette);
     }
 
@@ -764,18 +764,18 @@ $material-light-complimentary: (
 // hues (main, lighter, darker), or any of the aforementioned prefixed with "-contrast".
 @function material-color($palette, $hue: main, $opacity: null) {
 
-    @if not (type-of($palette) == map) {
+    @if not (k-meta-type-of($palette) == map) {
         $palette: get-base-palette($palette);
     }
 
     // If hueKey is a number between zero and one, then it actually contains an
     // opacity value, so recall this function with the default hue and that given opacity.
-    @if type-of($hue) == number and $hue >= 0 and $hue <= 1 {
+    @if k-meta-type-of($hue) == number and $hue >= 0 and $hue <= 1 {
         @return material-color($palette, main, $hue);
     }
 
     $color: k-map-get($palette, $hue);
-    $opacity: if($opacity == null, opacity($color), $opacity);
+    $opacity: if($opacity == null, k-color-alpha($color), $opacity);
 
     @return rgba( $color, $opacity );
 }
