--- a/packages/material/scss/grid/_variables.scss
+++ b/packages/material/scss/grid/_variables.scss
@@ -48,7 +48,7 @@ $kendo-grid-edit-cell-padding-x: $kendo-grid-cell-padding-x !default;
 $kendo-grid-edit-cell-padding-y: 6px !default;
 
 $kendo-grid-group-dropclue-size: 6px !default;
-$kendo-grid-group-dropclue-line-size: $kendo-grid-group-dropclue-size / 3;
+$kendo-grid-group-dropclue-line-size: k-math-div( $kendo-grid-group-dropclue-size, 3 ) !default;
 $kendo-grid-group-dropclue-height: $kendo-chip-calc-size !default;
 $kendo-grid-group-dropclue-top: calc( ( #{$kendo-chip-calc-size} + #{$kendo-grid-grouping-header-padding-y * 2} - #{$kendo-grid-group-dropclue-height} ) / 2) !default;
 
@@ -265,7 +265,7 @@ $kendo-grid-column-menu-group-header-border: $popup-border !default;
 
 $kendo-grid-drag-cell-width: ($icon-size * 3) !default;
 
-$kendo-grid-row-inner-height: calc( #{$line-height-em} + #{$kendo-grid-cell-padding-y * 2} );
+$kendo-grid-row-inner-height: calc( #{$line-height-em} + #{$kendo-grid-cell-padding-y * 2} ) !default;
 
 $kendo-grid-hierarchy-col-width: 32px !default;
 
