--- a/packages/material/scss/typography/_variables.scss
+++ b/packages/material/scss/typography/_variables.scss
@@ -23,7 +23,7 @@ $font-family-monospace: Consolas, "Ubuntu Mono", "Lucida Console", "Courier New"
 
 /// Line height used along with $font-size.
 /// @group typography
-$line-height: (28 / 14) !default;
+$line-height: k-math-div( 28, 14 ) !default;
 $line-height-xs: 1 !default;
 $line-height-sm: 1.2 !default;
 $line-height-md: $line-height !default;
